# VGD_AGENTE_IA

./: .agent.md  .env.example  .gitignore  AGENTS.md  BACKEND_INTEGRATION.md  CLAUDE.md  DWH_TABLES_AND_VIEWS.md  QUE_HACER.md  README.md  README_COMPLETO.md  create_platform_tables.sql  dwh_schema_catalog.json  init_db.py  init_platform_db.sh  migrate_roles.sql  pyproject.toml  run_api_server.sh  schema_hint.txt  schema_hint_customers.txt  schema_hint_demo.txt  schema_hint_dwh.txt  test_login.js  test_system.sh
agente_dwh/: __init__.py  agent.py  api_routes.py  app_services.py  bootstrap_env.py  cache.py  cli.py  column_labels.py  common_responses.py  config.py  dashboard_db.py  db_engine.py  demo_data.py  dialects.py  dwh.py  dwh_client.py  error_subagent.py  forecast.py  kpi_templates.py  llm_local.py  llm_worker.py  observability.py  query_executor.py  roles_db.py  saved_queries_db.py  spanish_text.py  sql_guard.py  sql_rewrites.py  sql_vehicle_context.py  users_db.py  web.py
frontend/: .env.example  .gitignore  ARQUITECTURA_FE.md  PLAN.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
proyecto_dashboard/: ARQUITECTURA.md  FASE_01_PERSISTENCIA.md  FASE_02_SNAPSHOTS.md  FASE_03_DASHBOARD_BASICO.md  FASE_04_SCHEDULER.md  FASE_05_AUTENTICACION.md  FASE_06_GRID_DINAMICO.md  FASE_07_CATALOGO_TEMPLATES.md  INDICE.md
scripts/: apply_vgd_table_comments.py  export_dwh_schema_hint.py  export_vgd_schema_hint.py  homologate_dwh_column_names.py  load_test.py  migrate_dwh_from_remote.sh  seed_postgres_demo.py  (+3 more)
(+72 files in other folders)
